# mycrew

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEBASE_CONTEXT.txt  Dockerfile  Dockerfile.webhook  README.md  README_LINT_REQUEST.md  REQUEST.md  Taskfile.yml  WEBHOOK_API.md  WEBHOOK_README.md  config.example.yaml  config.yaml  crew_analysis.md  defaults.yaml  docker-compose.webhook.yml  docker-compose.yml  main.py  my_script.py  precise-target.yaml  pyproject.toml  test.py  test_callback.py  test_docker_webhook.sh  test_example.py  test_github_webhook.py  test_main.py  test_migration_risk_analysis.py  test_my_script.py  test_root_simple.py  test_test.py  test_webhook.py
docs/: TOOLS_REFERENCE.md  WEBHOOK_REGISTRATION.md
docs/decisions/: ADR-001-valkey-memory-offload.md
docs/plans/: centralize-crew-configuration.md
examples/: github_pr_comment_payload.json  webhook_example.py
mycrew/: __main__.py  cli.py  main.py  providers.py  utils.py
mycrew/agents/: __init__.py
mycrew/agents/development/: __init__.py  architect.py  clarify.py  commit.py  explorer.py  implementer.py  issue_analyst.py  reviewer.py  test_validator.py
mycrew/agents/review/: __init__.py  correctness.py  pr_review.py
mycrew/development/: __init__.py  __main__.py  pipeline_runner.py
mycrew/development/crews/: __init__.py  reviewer_crew.py
mycrew/pipelines/development/: __init__.py  __main__.py  cli.py  pipeline_runner.py
mycrew/pipelines/review/: __init__.py  __main__.py  cli.py  review_runner.py
mycrew/review/: __main__.py  cli.py
mycrew/shared/: __init__.py  exceptions.py  issues.py  llm.py  pulls.py  tools.py
mycrew/shared/issues/: factory.py  fetchers.py  models.py
mycrew/shared/pulls/: exceptions.py  factory.py  parsers.py
scripts/: configure_webhook_remote.py  test_valkey_local.py
src/code_pipeline/: checkpoint.py  kickoff_client.py  llm.py  main.py  memory_monitor.py  models.py  providers.py  register_webhook.py  settings.py  utils.py  valkey_cache.py  webhook.py
src/code_pipeline/crews/: __init__.py  abc_crew.py  base.py
src/code_pipeline/tools/: __init__.py  create_pr_tool.py  factory.py  github_api_search_tool.py  human_tool.py  noop_tool.py  repo_file_writer_tool.py  repo_shell_tool.py  tactiq_tool.py
src/mycrew/: crew_runner.py  flow.py  llm.py  logging_utils.py  main.py  models.py  pipeline_runner.py  pipeline_state.py  providers.py  register_webhook.py  result.py  review_runner.py  settings.py  utils.py  webhook.py
src/mycrew/config/: tool_descriptions.yaml
src/mycrew/crews/: __init__.py  base.py  input_builder.py
src/mycrew/development/: cli.py  pipeline_runner.py
src/mycrew/issues/: __init__.py  exceptions.py  factory.py  fetchers.py  parsers.py
src/mycrew/pulls/: __init__.py  exceptions.py  factory.py  fetchers.py  parsers.py
src/mycrew/review/: __init__.py  review_runner.py
src/mycrew/shared/: base.py
src/mycrew/tools/: __init__.py  create_pr_tool.py  factory.py  github_api_search_tool.py  human_tool.py  noop_tool.py  repo_file_writer_tool.py  repo_shell_tool.py  tactiq_tool.py
tests/: conftest.py  mocks.py
tests/integration/: test_llm_parsing.py  test_webhook_api.py
tests/unit/: test_analyze_crew.py  test_checkpoint.py  test_commit_crew.py  test_crew_building.py  test_crew_execution.py  test_crews.py  test_error_handling.py  test_error_paths.py  test_explorer_crew.py  test_file_operations.py  test_flow_execution.py  test_flow_execution_comprehensive.py  test_human_tool.py  test_implement_crew.py  test_input_builder.py  test_kickoff_client.py  test_llm.py  test_main.py  test_main_helpers.py  test_models.py  test_pipeline_flow.py  test_providers.py  test_reviewer_crew.py  test_settings.py  test_state_mutations.py  test_step_execution.py  test_tool_behavior.py  test_tools.py  test_utils.py  test_valkey_cache.py  test_webhook_github.py  test_webhook_root.py
xerxes/tests/: test_robots_integration.py  test_robots_validation.py
(+118 files in other folders)
