[project]
name = "code_pipeline"
version = "0.1.0"
description = "code_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
]

[project.scripts]
kickoff = "code_pipeline.main:kickoff"
run_crew = "code_pipeline.main:kickoff"
plot = "code_pipeline.main:plot"
run_with_trigger = "code_pipeline.main:run_with_trigger"
webhook = "code_pipeline.webhook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.uv]
# onnxruntime 1.24+ dropped macOS x86_64 wheels; 1.19.2 has universal2 (Intel + ARM)
override-dependencies = ["onnxruntime==1.19.2"]
