[project]
name = "code_pipeline"
version = "0.1.0"
description = "code_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0,<1.0.0",
    "pydantic-settings>=2.10.1,<2.11",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
kickoff = "code_pipeline.main:kickoff"
run_crew = "code_pipeline.main:kickoff"
plot = "code_pipeline.main:plot"
run_with_trigger = "code_pipeline.main:run_with_trigger"
webhook = "code_pipeline.webhook:main"
register_webhook = "code_pipeline.register_webhook:main"
kickoff-client = "code_pipeline.kickoff_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/code_pipeline"]
omit = [
    "src/code_pipeline/main.py",  # Flow orchestration; tested via integration
]

[tool.coverage.report]
fail_under = 75

[tool.ruff.lint.per-file-ignores]
"src/code_pipeline/main.py" = ["E402"]

[tool.uv]
# onnxruntime 1.24+ dropped macOS x86_64 wheels; 1.19.2 has universal2 (Intel + ARM)
override-dependencies = ["onnxruntime==1.19.2"]
